--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,6 @@ Description: More about what it does (maybe more than one line)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-Depends: imsbasics
-Suggests: testthat, Rgraphviz, graphNEL, visNetwork
+Depends: imsbasics, visNetwork
+Suggests: testthat, Rgraphviz, graphNEL
 RoxygenNote: 6.0.1
