Add first version of validate_code(). Tests added and working. Next steps: detect cycles (in directed and non-directed graph).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,5 +2,6 @@
 
 export(create_graphNEL_object)
 export(create_list_of_functional_structure)
+export(validate_code)
 export(visualize_functional_structure)
 import(visNetwork)
